tests/predator-regre/test-0037.err
test-0037.c:28: warning: memory leak detected while destroying a variable on stack
test-0037.c:29: warning: memory leak detected while destroying a heap object
test-0037.c:31: error: double free by free()
